# kube-sphere

./: Cargo.toml  README.md
examples/: quick_dev.rs
src/: error.rs  main.rs
src/models/: mod.rs  namespace.rs  pod.rs
src/services/: configmap_service.rs  deployment_service.rs  ingress_service.rs  mod.rs  namespace_service.rs  pod_service.rs
src/web/: configmaps.rs  deployments.rs  ingress.rs  mod.rs  namespaces.rs  pods.rs  services.rs
src/web/templates/: chatbot-ui.yaml.hbs  example-statefulset.yaml.hbs  nginx.yaml.hbs
