[package]
name = "kube-sphere"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
env_logger = "0.10.0"
futures = "0.3.28"
handlebars = { version = "4.3.7", features = ["dir_source", "rust-embed"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.2", features = ["runtime", "derive", "ws"] }
log = "0.4.18"
rust-embed = { version = "6.6.1", features = ["interpolate-folder-path"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }

[dev-dependencies]
httpc-test = { version = "0.1.5", path = "./rust-httpc-test" }
chrono = "0.4.26"
#httpc-test  = { git = "https://github.com/jeremychone/rust-httpc-test", version = "0.1.5" }
